option(ACID_INSTALL_EXAMPLES "Installs the examples" ON)
option(BUILD_PACKER "Build asset packer application" ON)
option(BUILD_EXAMPLES_EDITOR "Build example editor applications" ON)
option(BUILD_EXAMPLES_TUTORIAL "Build example tutorial applications" ON)

add_subdirectory(ExampleFont)
add_subdirectory(ExampleGUI)
add_subdirectory(ExamplePBR)
add_subdirectory(ExamplePhysics)

if(BUILD_PACKER)
	add_subdirectory(Packer)
endif()

#if(BUILD_EDITOR AND BUILD_EXAMPLES_EDITOR)
#	add_subdirectory(ExampleEditor1)
#endif()

if(BUILD_EXAMPLES_TUTORIAL)
	add_subdirectory(Tutorial1)
	add_subdirectory(Tutorial2)
	add_subdirectory(Tutorial3)
	add_subdirectory(Tutorial4)
	add_subdirectory(Tutorial5)
	add_subdirectory(Tutorial6)
	add_subdirectory(Tutorial7)
endif()
